fix: change the way the external configurations are passed to Spring Boot.